--- a/src/index.liquid
+++ b/src/index.liquid
@@ -9,8 +9,30 @@ layout: 'base.liquid'
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
       <p>Perferendis accusantium sit illo neque rem omnis quaerat, nam similique vitae delectus ad magni vel quo maxime, magnam placeat. Reprehenderit, distinctio aliquam?</p>
       <div class="flex-group">
-        <a href="#featured-articles" class="btn btn--primary">Featured articles</a>
-        <a href="./blog.html" class="btn btn--neutral">Most recent articles</a>
+        <a class="frame-btn" href="#featured-articles">
+          <span class="frame-btn__outline frame-btn__outline--tall">
+            <span class="frame-btn__line frame-btn__line--tall"></span>
+            <span class="frame-btn__line frame-btn__line--flat"></span>
+          </span>
+          <span class="frame-btn__outline frame-btn__outline--flat">
+            <span class="frame-btn__line frame-btn__line--tall"></span>
+            <span class="frame-btn__line frame-btn__line--flat"></span>
+          </span>
+          <span class="frame-btn__solid"></span>
+          <span class="frame-btn__text">Featured Articles</span>
+        </a>
+        <a class="frame-btn" href="/blog/">
+          <span class="frame-btn__outline frame-btn__outline--tall">
+            <span class="frame-btn__line frame-btn__line--tall"></span>
+            <span class="frame-btn__line frame-btn__line--flat"></span>
+          </span>
+          <span class="frame-btn__outline frame-btn__outline--flat">
+            <span class="frame-btn__line frame-btn__line--tall"></span>
+            <span class="frame-btn__line frame-btn__line--flat"></span>
+          </span>
+          <span class="frame-btn__solid"></span>
+          <span class="frame-btn__text">Most Recent Articles</span>
+        </a>
       </div>
     </div>
     <div>
