--- a/src/_includes/base.liquid
+++ b/src/_includes/base.liquid
@@ -9,6 +9,11 @@
       href="/assets/img/csuci-favicon.png"
       rel="icon"
       type="image/x-icon" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
   </head>
   <body>
@@ -17,5 +22,9 @@
       {{ content }}
     </main>
     {% include 'footer.liquid' %}
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"></script>
   </body>
 </html>
