Bootstrap Second Edit

--- a/src/_includes/header.liquid
+++ b/src/_includes/header.liquid
@@ -3,7 +3,7 @@
     <div class="page-header__content">
       <nav class="navbar navbar-expand-lg bg-primary navbar-light py-3 fixed-top" style="background-color: #e3f2fd;">
         <div class="container">
-          <a href="#" class="navbar-brand">
+          <a href="/" class="navbar-brand">
             <img
               src="/assets/img/csuci-logo.png"
               alt="CSUCI Logo"
