--- a/public/style.css
+++ b/public/style.css
@@ -115,13 +115,12 @@ select {
   }
 }
 
-
-
 body {
   font-family: var(--ff-body);
   font-size: var(--fs-400);
   color: var(--clr-neutral-900);
 }
+
 
 h1,
 h2,
@@ -225,6 +224,7 @@ section,
 .site-footer {
   --logo-color: currentColor;
   padding: 2em 0;
+  margin-top: auto;
   color: var(--clr-neutral-100);
   background-color: var(--clr-primary-500);
   text-align: center;
@@ -399,6 +399,8 @@ section,
   background-size: 400% 300%;
   border: 1px solid var(--clr-primary-500);
   transition: 700ms cubic-bezier(0.165, 0.84, 0.44, 1);
+  align-self: start;
+  justify-self: start;
 }
 .gradient-btn:hover {
   transition: 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
@@ -515,3 +517,10 @@ section,
   transition: 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
+.student-name{
+  color: grey;
+}
+
+.game-description{
+  margin-top: 36em;
+}
