--- a/src/games_list.liquid
+++ b/src/games_list.liquid
@@ -9,15 +9,17 @@ pagination:
 
 <div class="section container">
   <h1 class="section-title">{{ game.title }}</h1>
-  <br>
-  by {{ game.developer }}
-  <p>
-    {{ game.description }}
-    <br>
-    Instructions:
-    {{ game.instructions }}
-  </p>
-
+  <div class="game-description">
+    <span class="student-name">
+      by {{ game.developer }}
+    </span>
+    <p>
+      {{ game.description }}
+      <br>
+      Instructions:
+      {{ game.instructions }}
+    </p>
+  </div>
   <div class="text-center">
     {% if pagination.href.previous %}
       <a class="gradient-btn" href="{{ pagination.href.previous }}">Prev</a>
@@ -28,6 +30,7 @@ pagination:
       <a href="{{ pagination.hrefs[ loop.index0 ] }}">{{ loop.index }}</a>
 
     {%- endfor %}
+    &nbsp;
     &nbsp;
     {% if pagination.href.next %}
       <a class="gradient-btn" href="{{ pagination.href.next }}">Next</a>
