--- a/src/index.liquid
+++ b/src/index.liquid
@@ -125,7 +125,7 @@ layout: 'base.liquid'
       <li>
         <article class="snippet">
           <img
-            src="/assets/blog/article-1.jpg"
+            src="/assets/img/blog/article-1.jpg"
             alt="This is a test"
             class="snippet__image">
           <h3 class="snippet__title">
@@ -143,7 +143,7 @@ layout: 'base.liquid'
       <li>
         <article class="snippet">
           <img
-            src="/assets/blog/article-2.jpg"
+            src="/assets/img/blog/article-2.jpg"
             alt="This is a test"
             class="snippet__image">
           <h3 class="snippet__title">
@@ -161,7 +161,7 @@ layout: 'base.liquid'
       <li>
         <article class="snippet">
           <img
-            src="/assets/blog/article-3.jpg"
+            src="/assets/img/blog/article-3.jpg"
             alt="This is a test"
             class="snippet__image">
           <h3 class="snippet__title">
@@ -179,7 +179,7 @@ layout: 'base.liquid'
       <li>
         <article class="snippet">
           <img
-            src="/assets/blog/article-4.jpg"
+            src="/assets/img/blog/article-4.jpg"
             alt="This is a test"
             class="snippet__image">
           <h3 class="snippet__title">
@@ -197,7 +197,7 @@ layout: 'base.liquid'
       <li>
         <article class="snippet">
           <img
-            src="/assets/blog/article-5.jpg"
+            src="/assets/img/blog/article-5.jpg"
             alt="This is a test"
             class="snippet__image">
           <h3 class="snippet__title">
