--- a/src/games_list.liquid
+++ b/src/games_list.liquid
@@ -7,36 +7,35 @@ pagination:
   alias: game
 permalink: "/games/{{ game.title | slugify }}.html"
 ---
+<section class="landing" ;>
+  <div class="section container">
+    <h1 class="section-title">{{ game.title }}</h1>
+    <div class="game-info">
+      <span class="student-name">
+        by {{ game.developer }}
+      </span>
+      <p>
+        {{ game.description }}
+        <br>
+        Instructions:
+        {{ game.instructions }}
+      </p>
+    </div>
+    <div class="text-center">
+      {% if pagination.href.previous %}
+        <a class="gradient-btn" href="{{ pagination.href.previous }}">Prev</a>
+      {% endif %}
 
-<div class="section container">
-  <h1 class="section-title">{{ game.title }}</h1>
-  <div class="game-description">
-    <span class="student-name">
-      by {{ game.developer }}
-    </span>
-    <p>
-      {{ game.description }}
-      <br>
-      Instructions:
-      {{ game.instructions }}
-    </p>
+      {%- for pageEntry in pagination.pages %}
+
+        <a href="{{ pagination.hrefs[ loop.index0 ] }}">{{ loop.index }}</a>
+
+      {%- endfor %}
+      &nbsp;
+      &nbsp;
+      {% if pagination.href.next %}
+        <a class="gradient-btn" href="{{ pagination.href.next }}">Next</a>
+      {% endif %}
+    </div>
   </div>
-  <div class="text-center">
-    {% if pagination.href.previous %}
-      <a class="gradient-btn" href="{{ pagination.href.previous }}">Prev</a>
-    {% endif %}
-
-    {%- for pageEntry in pagination.pages %}
-
-      <a href="{{ pagination.hrefs[ loop.index0 ] }}">{{ loop.index }}</a>
-
-    {%- endfor %}
-    &nbsp;
-    &nbsp;
-    {% if pagination.href.next %}
-      <a class="gradient-btn" href="{{ pagination.href.next }}">Next</a>
-    {% endif %}
-  </div>
-
-
-</div>
+</section>
