--- a/src/games_list.liquid
+++ b/src/games_list.liquid
@@ -7,7 +7,7 @@ pagination:
   alias: game
 permalink: "/games/{{ game.title | slugify }}.html"
 ---
-<section class="landing" ;>
+<section class="landing">
   <div class="section container">
     <h1 class="section-title">{{ game.title }}</h1>
     <div class="game-info">
