--- a/src/index.liquid
+++ b/src/index.liquid
@@ -129,7 +129,7 @@ layout: 'base.liquid'
             alt="This is a test"
             class="snippet__image">
           <h3 class="snippet__title">
-            <a href="/blog/first-article/">First Article</a>
+            <a href="/blogs/first-article/">First Article</a>
           </h3>
           <p class="snippet__meta">by
             <span>Unknown</span>
@@ -137,7 +137,7 @@ layout: 'base.liquid'
             <span>Apr 30, 2023</span>
           </p>
           <p class="snippet__body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusantium sit illo neque rem omnis quaerat, nam similique vitae delectus ad magni vel quo maxime, magnam placeat. Reprehenderit, distinctio aliquam?</p>
-          <a href="/blog/first-article/" class="gradient-btn">Continue Reading</a>
+          <a href="/blogs/first-article/" class="gradient-btn">Continue Reading</a>
         </article>
       </li>
       <li>
@@ -147,7 +147,7 @@ layout: 'base.liquid'
             alt="This is a test"
             class="snippet__image">
           <h3 class="snippet__title">
-            <a href="/blog/msecond-article/">Second Article</a>
+            <a href="/blogs/second-article/">Second Article</a>
           </h3>
           <p class="snippet__meta">by
             <span>Unknown</span>
@@ -155,7 +155,7 @@ layout: 'base.liquid'
             <span>May 14, 2023</span>
           </p>
           <p class="snippet__body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusantium sit illo neque rem omnis quaerat, nam similique vitae delectus ad magni vel quo maxime, magnam placeat. Reprehenderit, distinctio aliquam?</p>
-          <a href="/blog/second-article/" class="gradient-btn">Continue Reading</a>
+          <a href="/blogs/second-article/" class="gradient-btn">Continue Reading</a>
         </article>
       </li>
       <li>
@@ -165,7 +165,7 @@ layout: 'base.liquid'
             alt="This is a test"
             class="snippet__image">
           <h3 class="snippet__title">
-            <a href="/blog/third-article/">Third Article</a>
+            <a href="/blogs/third-article/">Third Article</a>
           </h3>
           <p class="snippet__meta">by
             <span>Unknown</span>
@@ -173,7 +173,7 @@ layout: 'base.liquid'
             <span>May 27, 2023</span>
           </p>
           <p class="snippet__body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusantium sit illo neque rem omnis quaerat, nam similique vitae delectus ad magni vel quo maxime, magnam placeat. Reprehenderit, distinctio aliquam?</p>
-          <a href="/blog/third-article/" class="gradient-btn">Continue Reading</a>
+          <a href="/blogs/third-article/" class="gradient-btn">Continue Reading</a>
         </article>
       </li>
       <li>
@@ -183,7 +183,7 @@ layout: 'base.liquid'
             alt="This is a test"
             class="snippet__image">
           <h3 class="snippet__title">
-            <a href="/blog/fourth-article/">Fourth Article</a>
+            <a href="/blogs/fourth-article/">Fourth Article</a>
           </h3>
           <p class="snippet__meta">by
             <span>Unknown</span>
@@ -191,7 +191,7 @@ layout: 'base.liquid'
             <span>Jun 14, 2023</span>
           </p>
           <p class="snippet__body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusantium sit illo neque rem omnis quaerat, nam similique vitae delectus ad magni vel quo maxime, magnam placeat. Reprehenderit, distinctio aliquam?</p>
-          <a href="/blog/fourth-article/" class="gradient-btn">Continue Reading</a>
+          <a href="/blogs/fourth-article/" class="gradient-btn">Continue Reading</a>
         </article>
       </li>
       <li>
@@ -201,7 +201,7 @@ layout: 'base.liquid'
             alt="This is a test"
             class="snippet__image">
           <h3 class="snippet__title">
-            <a href="/blog/fifth-article/">Fifth Article</a>
+            <a href="/blogs/fifth-article/">Fifth Article</a>
           </h3>
           <p class="snippet__meta">by
             <span>Unknown</span>
@@ -209,7 +209,7 @@ layout: 'base.liquid'
             <span>Jun 14, 2023</span>
           </p>
           <p class="snippet__body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusantium sit illo neque rem omnis quaerat, nam similique vitae delectus ad magni vel quo maxime, magnam placeat. Reprehenderit, distinctio aliquam?</p>
-          <a href="/blog/fifth-article/" class="gradient-btn">Continue Reading</a>
+          <a href="/blogs/fifth-article/" class="gradient-btn">Continue Reading</a>
         </article>
       </li>
     </ul>
