--- a/src/_includes/header.liquid
+++ b/src/_includes/header.liquid
@@ -31,7 +31,7 @@
                 <a href="/blog/" class="nav-link">Blog</a>
               </li>
               <li class="nav-item">
-                <a href="#about" class="nav-link">About</a>
+                <a href="/about/" class="nav-link">About</a>
               </li>
             </ul>
           </div>
