--- a/src/blog.liquid
+++ b/src/blog.liquid
@@ -5,20 +5,29 @@ layout: 'base.liquid'
 <section class="landing">
   <div class="section container">
     <h1 class="section-title">Recent articles</h1>
+    <ul role="list" class="articles-list flow">
 
-    <ul role="list" class="articles__list flow">
-
-      {%- for post in collections.post -%}
-        <li>
-          <article class="snippet">
-            <img
-              src="{{ post.data.image }}"
-              alt="test image"
-              class="snippet image">
-            <h3 class="snippet__title">{{ post.data.title }}</h3>
-          </article>
-        </li>
-      {%- endfor -%}
+      {%- for post in collections.post reversed -%}
+      <li>
+      <article class="snippet">
+        <img
+          src="{{ post.data.image }}"
+          alt="{{ post.data.imageAlt }}"
+          class="snippet__image">
+        <h3 class="snippet__title">
+          <a href="{{ post.url }}">
+            {{ post.data.title }}</a>
+        </h3>
+        <p class="snippet__meta">by
+          <span>{{ post.data.author }}</span>
+          on
+          <span>{{ post.date | postDate }}</span>
+        </p>
+        <p class="snippet__body">{{ post.data.description }}</p>
+        <a href="{{ post.url }}" class="gradient-btn">Continue Reading</a>
+      </article>
+      </li>
+      {%- endfor %}
 
     </ul>
   </div>
