--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,20 @@
- @import url('https://fonts.googleapis.com/css2?family=Quattrocento&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quattrocento&display=swap');
+
+/*.btn-primary{
+  background-color:#e51a38 !important;
+  border-color:#e51a38;
+}*/
+.btn-primary, .btn-primary:visited {
+    background-color: #e51a38 !important;
+    border-color: #e51a38;
+}
+
+.btn-primary:hover {
+  background-color: #fff !important;
+  border-color: #fff;
+  color: #e51a38;
+}
+
 
 :root {
   --fs-300: 0.9375rem;
@@ -193,7 +209,7 @@ section,
   text-decoration: underline;
 }
 
-/*
+/* Bootstrap Nav Hover Effect 
 .nav-link{
   position: relative;
 }
@@ -317,7 +333,7 @@ section,
   background-color: var(--clr-neutral-900);
 }
 
-.articles-list {
+.articles__list {
   --flow-spacer: 3rem;
   margin: 6rem 0;
 }
@@ -360,8 +376,6 @@ section,
 .snippet__title {
   grid-area: title;
 }
-
-
 .snippet__meta {
   grid-area: meta;
   color: var(--clr-neutral-300);
@@ -564,26 +578,36 @@ section,
   transition: 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-
-/*Game Landing Page*/
+/*Game Landing*/
 
 .landing {
   background-color: var(--clr-neutral-900);
   color: #fff !important;
 }
 
-.center-heading {
-  margin: auto;
+
+.hero{
+  background-color: var(--clr-neutral-900);
+}
+.hero > div {
+  display: grid;
+  grid-auto-flow: row;
+  grid-auto-columns: 1fr;
+  align-items: center;
+  gap: 3em;
 }
 
-.card {
-  background-color: transparent;
-  display: flex;
-  width: 18rem;
+@media (min-width: 45em) {
+  .hero > div {
+    grid-auto-flow: column;
+  }
 }
 
-.game-link {
-  text-decoration: none;
+
+
+
+.select {
+  color: #fff;
 }
 
 .list {
@@ -595,8 +619,17 @@ section,
   color: #fff !important;
 }
 
-/* Individual Games List Page */
+/*Game Landing Page*/
 
+.game-link {
+  text-decoration: none;
+}
+
+.center-heading {
+  margin: auto;
+}
+
+/* Game List Page */
 .student-name{
   color: grey;
 }
@@ -604,17 +637,4 @@ section,
 .game-info {
   margin-top: 36em;
   color: #fff;
-}
-
-/* About Us */
-
-.about-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 2em;
-}
-
-.about-txt {
-  text-indent: 30px;
 }
