sticky footer, all site links functional, styling

--- a/src/blog.liquid
+++ b/src/blog.liquid
@@ -4,7 +4,7 @@ layout: 'base.liquid'
 ---
 <section class="landing">
   <div class="section container">
-    <h1 class="section-title">Recent articles</h1>
+    <h1 class="section-title blog-heading">Recent Articles</h1>
     <ul role="list" class="articles-list flow">
 
       {%- for post in collections.post reversed -%}
