--- a/src/index.liquid
+++ b/src/index.liquid
@@ -58,7 +58,7 @@ layout: 'base.liquid'
         <h5>News & Blog</h5>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
         <p>
-          <a class="frame-btn" href="#">
+          <a class="frame-btn" href="/blog/">
             <span class="frame-btn__outline frame-btn__outline--tall">
               <span class="frame-btn__line frame-btn__line--tall"></span>
               <span class="frame-btn__line frame-btn__line--flat"></span>
@@ -82,7 +82,7 @@ layout: 'base.liquid'
         <h5>Games</h5>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
         <p>
-          <a class="frame-btn" href="#">
+          <a class="frame-btn" href="/games/">
             <span class="frame-btn__outline frame-btn__outline--tall">
               <span class="frame-btn__line frame-btn__line--tall"></span>
               <span class="frame-btn__line frame-btn__line--flat"></span>
@@ -115,7 +115,6 @@ layout: 'base.liquid'
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-
 
 <section id="featured-articles" class="featured-articles">
   <div class="container flow">
