--- a/src/about.liquid
+++ b/src/about.liquid
@@ -3,7 +3,7 @@ title: About
 layout: 'base.liquid'
 ---
 <section class="landing">
-<h2 class="text-center">About Us</h1>
+<!--<h2 class="text-center">About Us</h2>-->
 <div class="container">
 
 <img class="about-img" src="/assets/img/landscape-3.jpg">
