--- a/src/index.liquid
+++ b/src/index.liquid
@@ -119,7 +119,7 @@ layout: 'base.liquid'
 <section id="featured-articles" class="featured-articles">
   <div class="container flow">
     <h2 class="section-title text-center ">Spotlight</h2>
-    <p class="text-center">Here is a sample of articles that give you a good idea of what this site is all about.</p>
+    <p class="text-center">Featured articles and blogs from CSUCI</p>
     <ul role="list" class="articles__list flow">
       <li>
         <article class="snippet">
