--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Quattrocento&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quattrocento&family=Silkscreen&family=Tajawal&family=Yellowtail&display=swap');
+
 
 :root {
   --fs-300: 0.9375rem;
@@ -7,8 +8,8 @@
   --fs-600: 1.875rem;
   --fs-700: 2rem;
 
-  --ff-body: "Roboto", sans-serif;
-  --ff-heading: "Playfair Display", serif;
+  --ff-body: "Roboto", sans-serif; 
+  --ff-heading: 'Playfair Display', serif;
 
   --fw-400: 400;
   --fw-700: 700;
@@ -24,7 +25,10 @@
   --clr-neutral-400: hsla(0, 0%, 40%, 1);
   --clr-neutral-500: hsla(0, 0%, 60%, 1);
   --clr-neutral-900: hsla(0, 0%, 10%, 1);
+
+  --clr-neon: red;
 }
+
 
 @media (min-width: 35em) {
   :root {
@@ -207,6 +211,14 @@ section,
   Homepage
   /////////////////////// */
 
+.featured-articles {
+    background-color: var(--clr-neutral-900);
+  }
+  
+.articles__list {
+    --flow-spacer: 3rem;
+    margin: 6rem 0;
+  }
   
 /*Carousel*/
 
@@ -277,15 +289,6 @@ section,
   }
 }
 
-.featured-articles {
-  background-color: var(--clr-neutral-900);
-}
-
-.articles__list {
-  --flow-spacer: 3rem;
-  margin: 6rem 0;
-}
-
 /* //////////////////////
   Footer
   /////////////////////// */
@@ -335,6 +338,10 @@ section,
     "meta"
     "body"
     "button";
+}
+
+.snippet__body{
+  line-height: 1.75em;
 }
 
 .snippet__image {
@@ -388,6 +395,17 @@ section,
 }
 
 /* ////Buttons///// */
+
+.btn-primary, .btn-primary:visited {
+  background-color: #e51a38 !important;
+  border-color: #e51a38;
+}
+
+.btn-primary:hover {
+background-color: #fff !important;
+border-color: #fff;
+color: #e51a38;
+}
 
 .gradient-btn {
   display: inline-block;
@@ -548,15 +566,74 @@ section,
   transition: 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
+.neon-button {
+  font-size: 1.5rem;
+  font-family: 'Yellowtail', cursive;
+  display: inline-block;
+  cursor: pointer;
+  text-decoration: none;
+  color: #fff;
+  border: var(--clr-neon) 0.125em solid;
+  padding: 0.25em 1em;
+  border-radius: 80% 20% 70% 30% / 30% 40% 60% 70%;
+  text-shadow: 0 0 0.125em rgba(255, 255, 255, 0.3), 0 0 0.45em currentColor;
+  position: relative;
+}
+
+.neon-button::before {
+  pointer-events: none;
+  content: "";
+  position: absolute;
+  background: var(--clr-neon);
+  top: 120%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  transform: perspective(1em) rotateX(40deg) scale(1, 0.35);
+  filter: blur(1em);
+  opacity: 0.7;
+}
+
+.neon-button::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  box-shadow: 0 0 2em 0.5em var(--clr-neon);
+  opacity: 0;
+  background-color: var(--clr-neon);
+  z-index: -1;
+  transition: opacity 100ms linear;
+}
+
+.neon-button:hover,
+.neon-button:focus {
+  color: var(--clr-bg);
+  text-shadow: none;
+}
+
+.neon-button:hover::before,
+.neon-button:focus::before {
+  opacity: 1;
+}
+
+.neon-button:hover::after,
+.neon-button:focus::after {
+  opacity: 1;
+}
+
+.neon-button + .neon-button {
+  margin-left: 5em;
+}
+
 /*Game Landing*/
 
 .landing {
   background-color: var(--clr-neutral-900);
   color: #fff !important;
-}
-
-.select {
-  color: #fff;
 }
 
 .list {
@@ -576,66 +653,68 @@ section,
   margin: auto;
 }
 
-  /*.btn-primary{
-  background-color:#e51a38 !important;
-  border-color:#e51a38;
-  }*/
-
-.btn-primary, .btn-primary:visited {
-  background-color: #e51a38 !important;
-  border-color: #e51a38;
-}
-
-.btn-primary:hover {
-background-color: #fff !important;
-border-color: #fff;
-color: #e51a38;
-}
-
 /* Game List Page */
 
 .student-name{
   color: grey;
 }
 
-.game-info {
-  margin-top: 2em;
-  color: #fff;
-}
-
-.title-and-author{
+.name-and-author{
   text-align: center;
+  line-height: 2.5em;
 }
 
 .game-name {
   margin-bottom: .1em;
+  font-family: 'Silkscreen', cursive !important;
 }
+
 
 .description {
   margin-top: 1em;
+  line-height: 2em;
+  font-family: 'Tajawal', sans-serif;
+  font-size: 1.25rem;
+}
+
+.iframe-container {
+  position: relative;
+  overflow: hidden;
 }
 
 iframe {
   display: block;
+  border: 2px solid red;
   margin: 0 auto;
+  width: 600px;
+  height: 600px;
+  max-width: 100%;
 }
 
-/*About List Page */
+/* Blog */
+
+.blog-heading {
+  margin-bottom: 1em;
+}
+
+/* About Us */
 
 .about-img {
   display: block;
   margin-left: auto;
   margin-right: auto;
   padding: 1.5em;
+  border-radius: 50%;
+  width: 800px;
+  height: 800px;
 }
 
 .about-txt {
   text-indent: 30px;
+  line-height: 2em;
 }
  
-/* Blog */
 
-.blog-heading{
-  margin-bottom: 1em;
-}
+
+
 
