Refined about page, game pages, footer

--- a/src/_includes/footer.liquid
+++ b/src/_includes/footer.liquid
@@ -6,5 +6,5 @@
     height="75"
     alt="CI Logo Version 2">
   <br>
-  <p>© 2023 CSUCI. All rights reserved.</p>
+  <p class="copyright-info">© 2023 CSUCI. All rights reserved.</p>
 </footer>
