--- a/src/index.liquid
+++ b/src/index.liquid
@@ -118,8 +118,8 @@ layout: 'base.liquid'
 
 <section id="featured-articles" class="featured-articles">
   <div class="container flow">
-    <h2 class="section-title text-center ">Spotlight</h2>
-    <p class="text-center">Featured articles and blogs from CSUCI</p>
+    <h2 class="section-title text-center">Spotlight</h2>
+    <!--<p class="text-center">Featured articles and blogs from CSUCI</p>-->
     <ul role="list" class="articles__list flow">
       <li>
         <article class="snippet">
