--- a/src/games_list.liquid
+++ b/src/games_list.liquid
@@ -7,7 +7,7 @@ pagination:
   alias: game
 permalink: "/games/{{ game.title | slugify }}-{{ game.developer | slugify }}.html"
 ---
-<section class="landing">
+<section class="landing custom-drk">
   <div class="section container">
     <div class="iframe-container">
       <iframe
