--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Quattrocento&family=Silkscreen&family=Tajawal&family=Yellowtail&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quattrocento&family=Silkscreen&family=Tajawal&family=Yellowtail&family=Old+Standard+TT&display=swap');
 
 
 :root {
@@ -25,8 +25,6 @@
   --clr-neutral-400: hsla(0, 0%, 40%, 1);
   --clr-neutral-500: hsla(0, 0%, 60%, 1);
   --clr-neutral-900: hsla(0, 0%, 10%, 1);
-
-  --clr-neon: red;
 }
 
 
@@ -161,6 +159,7 @@ section,
 
 .section-title {
   font-size: var(--fs-600);
+  font-family: 'Playfair Display', serif;
 }
 
 .center-heading {
@@ -295,14 +294,11 @@ section,
 
   .site-footer {
     padding: 1.75em 0;
-    margin: 0;
+    bottom: 0;
     color: var(--clr-neutral-100);
     background-color: var(--clr-primary-500);
     text-align: center;
     width: 100%;
-    min-height: 100%;
-    display: flex;
-    flex-direction: column;
   }
   
   .logo {
@@ -310,7 +306,9 @@ section,
     display: block;
    }
 
-
+   .copyright-info {
+    font-size: medium;
+   }
 /* //////////////////////
   Individual article page
   /////////////////////// */
@@ -567,46 +565,16 @@ color: #e51a38;
 }
 
 .neon-button {
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   font-family: 'Yellowtail', cursive;
   display: inline-block;
   cursor: pointer;
   text-decoration: none;
   color: #fff;
-  border: var(--clr-neon) 0.125em solid;
   padding: 0.25em 1em;
-  border-radius: 80% 20% 70% 30% / 30% 40% 60% 70%;
+  /*border-radius: 80% 20% 70% 30% / 30% 40% 60% 70%;*/
   text-shadow: 0 0 0.125em rgba(255, 255, 255, 0.3), 0 0 0.45em currentColor;
   position: relative;
-}
-
-.neon-button::before {
-  pointer-events: none;
-  content: "";
-  position: absolute;
-  background: var(--clr-neon);
-  top: 120%;
-  left: 0;
-  width: 100%;
-  height: 100%;
-
-  transform: perspective(1em) rotateX(40deg) scale(1, 0.35);
-  filter: blur(1em);
-  opacity: 0.7;
-}
-
-.neon-button::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  box-shadow: 0 0 2em 0.5em var(--clr-neon);
-  opacity: 0;
-  background-color: var(--clr-neon);
-  z-index: -1;
-  transition: opacity 100ms linear;
 }
 
 .neon-button:hover,
@@ -615,21 +583,15 @@ color: #e51a38;
   text-shadow: none;
 }
 
-.neon-button:hover::before,
-.neon-button:focus::before {
-  opacity: 1;
-}
-
-.neon-button:hover::after,
-.neon-button:focus::after {
-  opacity: 1;
-}
-
 .neon-button + .neon-button {
   margin-left: 5em;
 }
 
 /*Game Landing*/
+
+.collections{
+  padding-bottom: 3em;
+}
 
 .landing {
   background-color: var(--clr-neutral-900);
@@ -654,6 +616,10 @@ color: #e51a38;
 }
 
 /* Game List Page */
+
+.custom-drk {
+  background-color:hsla(0, 0%, 5%, 1);
+}
 
 .student-name{
   color: grey;
@@ -684,10 +650,10 @@ color: #e51a38;
 
 iframe {
   display: block;
-  border: 2px solid red;
+  border: 2px solid var(--clr-primary-500);
   margin: 0 auto;
   width: 600px;
-  height: 600px;
+  min-height: 600px;
   max-width: 100%;
 }
 
@@ -699,22 +665,67 @@ iframe {
 
 /* About Us */
 
-.about-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 1.5em;
-  border-radius: 50%;
-  width: 800px;
-  height: 800px;
+.column-1 {
+  margin-top: 2.75em;
+}
+
+.about-heading{
+  text-align: center;
 }
 
 .about-txt {
   text-indent: 30px;
   line-height: 2em;
+  margin: auto;
+  overflow: hidden;
+  padding-top: 1.25em;
+  min-width: 400px;
 }
- 
 
+.about-img {
+  padding: 2em;
+  border-radius: 50% 50% 0% 0% / 38% 36% 10% 10%;
+  max-height: 800px;
+  min-width: 400px;
+  margin: 0 auto;
+}
 
+.fade-in {
+  animation: fadeIn ease 2s;
+  -webkit-animation: fadeIn ease 2s;
+  -moz-animation: fadeIn ease 2s;
+  -o-animation: fadeIn ease 2s;
+  -ms-animation: fadeIn ease 2s;
+}
 
+@keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-moz-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-webkit-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-o-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-ms-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+} 
+
+@media (min-width: 40em) {
+  .about-img {
+    display: flex;
+   }
+}
 
