--- a/src/style.css
+++ b/src/style.css
@@ -392,11 +392,69 @@ section,
   }
 }
 
+/* Game Table */
+
+tr.link-row a:hover {
+  color: #e51a38 ;
+  text-decoration: underline;
+  
+}
+
+tr.link-row a {
+  color: white ;
+  text-decoration: underline;
+
+}
+
+.btn-link-row {
+  background-color: #e51a38 !important;
+  color: #fff;
+  border-color: #e51a38;
+  
+}
+
+.btn-link-row:hover, .btn-link-row a:hover {
+  background-color: #fff !important;
+  color: #e51a38 !important;
+  border-color: #fff;
+}
+
+/* Scroll to Top */
+
+.btn-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 9999;
+}
+
+.btn-inv {
+  color: var(--clr-neutral-100);
+}
+
+
 /* ////Buttons///// */
 
 .btn-primary, .btn-primary:visited {
   background-color: #e51a38 !important;
   border-color: #e51a38;
+  display: inline-block;
+  padding: 1em 2em;
+  border-radius: 0;
+  color: var(--clr-neutral-100);
+  margin-top: 2rem;
+  font-weight: bold;
+  font-size: 0.678rem;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  text-decoration: none;
+  background: linear-gradient(to right, rgba(178, 135, 111, 0) 25%, #e51a38 75%);
+  background-position: 1% 50%;
+  background-size: 400% 300%;
+  border: 1px solid var(--clr-primary-500);
+  transition: 700ms cubic-bezier(0.165, 0.84, 0.44, 1);
+  align-self: start;
+  justify-self: start;
 }
 
 .btn-primary:hover {
@@ -404,6 +462,7 @@ background-color: #fff !important;
 border-color: #fff;
 color: #e51a38;
 }
+
 
 .gradient-btn {
   display: inline-block;
@@ -603,7 +662,7 @@ color: #e51a38;
   margin-bottom: 2rem;
 }
 
-.table {
+.table, .table:link {
   color: #fff !important;
 }
 
